--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,3 +2,8 @@
 user = "tomkaul"
 password = "kE9cPWy.@qm3gLA"
 host = "cluster0.duel6hs.mongodb.net"
+
+[passwords]
+# Follow the rule: username = "password"
+thomas = "tyu567"
+Jaksen = "jkluio"
